Use hamcrest instead of assertj